# prox_alert

./: LICENSE
proximity_alert_system/: CMakeLists.txt  package.xml  setup.cfg  setup.py
proximity_alert_system/msg/: EstimatedDistance.msg
proximity_alert_system/proximity_alert_system/: alert_sender.py  detected_id_publisher.py
proximity_alert_system/tools/: receive.py
qr_detection_system/: package.xml  setup.cfg  setup.py
qr_detection_system/qr_detection_system/: qr_detection_node.py
robot_sample/: package.xml  setup.cfg  setup.py
robot_sample/robot_sample/: camera_node.py
robot_sample/tool/: calib.py  recordchess.py
