<?xml version="1.0"?>
<package format="3">
  <name>proximity_alert_system</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yuji.kaneko.t1@dc.tohoku.ac.jp">kaneko</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <!-- 以下のbuild_dependとexec_dependはメッセージの生成と実行時の依存関係を指定 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
